--- a/.github/workflows/OpenWrt_immortalwrt_6.12.yml
+++ b/.github/workflows/OpenWrt_immortalwrt_6.12.yml
@@ -171,10 +171,10 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-          echo "release_tag=$(date +"%Y.%m.%d")-immortalwrt3" >> $GITHUB_OUTPUT
+          echo "release_tag=$(date +"%Y.%m.%d")-immortalwrt" >> $GITHUB_OUTPUT
           echo "release_date=$(date "+%Y年%m月%d日")" >> $GITHUB_OUTPUT
           touch release.txt
-          echo -e "**📥固件说明**: \n" >> release.txt
+          echo -e "**固件说明**: \n" >> release.txt
           echo -e "#### 后台地址: \`192.168.5.1\`\n" >> release.txt
           echo -e "#### 后台密码: \`password\`\n" >> release.txt
           echo "status=success" >> $GITHUB_OUTPUT
@@ -200,7 +200,7 @@ jobs:
       uses: dev-drprasad/delete-older-releases@v0.3.4
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       with:
-          keep_latest: 480
+          keep_latest: 10
           delete_tags: true
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
