--- a/.github/workflows/OpenWrt_immortalwrt_6.12.yml
+++ b/.github/workflows/OpenWrt_immortalwrt_6.12.yml
@@ -8,15 +8,13 @@
 
 name: OpenWrt_immortalwrt_6.12
 
-permissions: write-all
-
 on:
   repository_dispatch:
   workflow_dispatch:
-  # schedule:
-  #   - cron: 11 23 * * * 
-  # watch:
-  #   types: started
+  schedule:
+    - cron: 11 23 */4 * * 
+  watch:
+     types: started
 
 env:
   REPO_URL: https://github.com/immortalwrt/immortalwrt
@@ -28,7 +26,7 @@ env:
 
 jobs:
   Build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
@@ -113,48 +111,102 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
   
-    - name: Compile the firmware
+    - name: Compile Packages
       id: compile
       run: |
-        cd openwrt
+        cd $OPENWRTROOT
+        export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "date1=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
-        echo "date2=$(date "+%Y年%m月%d日")" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
-
-    - name: Organize and Rename Files
-      id: organize
-      if: ${{ env.UPLOAD_FIRMWARE == 'true' && !cancelled() }}
-      run: |
-        cd openwrt/bin/targets/x86/64
-        rm -rf packages *rootfs.tar.gz *rootfs.img.gz *combined.img.gz *.bin *.config *.buildinfo *.json sha256sums *.manifest
+        make tools/compile -j$(nproc) || make tools/compile -j$(nproc) || make tools/compile -j1 IGNORE_ERRORS=1 V=s
+        make toolchain/compile -j$(nproc) || make toolchain/compile -j$(nproc) || make toolchain/compile -j1 IGNORE_ERRORS=1 V=s
+        make target/compile -j$(nproc) || make target/compile -j$(nproc) IGNORE_ERRORS=1 || make target/compile -j1 IGNORE_ERRORS=1 V=s
+        make diffconfig
+        make package/compile -j$(nproc) IGNORE_ERRORS=1 || make package/compile -j$(nproc) IGNORE_ERRORS=1
+        make package/index
+        cd $OPENWRTROOT/bin/packages/*
+        PLATFORM=$(basename `pwd`)
+        echo "PLATFORM=$PLATFORM" >> $GITHUB_ENV
+        echo "PLATFORM=$PLATFORM" >> $GITHUB_OUTPUT
+        cd $OPENWRTROOT/bin/targets/*
+        TARGET=$(basename `pwd`)
+        echo "TARGET=$TARGET" >> $GITHUB_ENV
+        echo "TARGET=$TARGET" >> $GITHUB_OUTPUT
+        cd *
+        SUBTARGET=$(basename `pwd`)
+        echo "SUBTARGET=$SUBTARGET" >> $GITHUB_ENV
+        echo "SUBTARGET=$SUBTARGET" >> $GITHUB_OUTPUT
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
-        echo "status=success" >> $GITHUB_OUTPUT
-        
-    - name: Upload the firmware to github
-      uses: actions/upload-artifact@main
-      if: steps.organize.outputs.status == 'success' && !cancelled()
-      with:
-        name: ${{ env.date1 }}_${{ env.OPENWRT_NAME }}_${{ env.OPENWRT_NAME1 }}
-        path: ${{ env.FIRMWARE }}
+        echo "FIRMWARE=$PWD" >> $GITHUB_OUTPUT
+        echo "COMPILE_STATUS=success" >> $GITHUB_OUTPUT
 
-    - name: Generate release tags
+    - name: Generate Firmware
+      if: steps.compile.outputs.COMPILE_STATUS == 'success'
+      id: generate
+      run: |
+        cd $OPENWRTROOT
+        mkdir -p files/etc/uci-defaults/
+        cp ../scripts/immortalwrt/snapshots-init-settings.sh files/etc/uci-defaults/99-init-settings
+        mkdir -p files/etc/apk/repositories.d 
+        cp ../configs/apk/openwrt-repositories-snapshots.conf files/etc/apk/repositories
+        cp ../configs/apk/openwrt-repositories-snapshots.conf files/etc/apk/repositories.d/distfeeds.list
+        make package/install -j$(nproc) || make package/install -j1 V=s
+        make target/install -j$(nproc) || make target/install -j1 V=s
+        # pushd bin/targets/x86/64
+        # rm -rf immortalwrt-x86-64-generic-kernel.bin
+        # rm -rf immortalwrt-x86-64-generic-rootfs.tar.gz
+        # rm -rf immortalwrt-x86-64-generic-squashfs-combined-efi.vhdx
+        # rm -rf immortalwrt-x86-64-generic-squashfs-combined-efi.vmdk
+        # rm -rf immortalwrt-x86-64-generic-squashfs-combined.img.gz
+        # rm -rf immortalwrt-x86-64-generic-squashfs-combined.vhdx
+        # rm -rf immortalwrt-x86-64-generic-squashfs-combined.vmdk
+        # rm -rf immortalwrt-x86-64-generic-squashfs-rootfs.img.gz
+        # mv immortalwrt-x86-64-generic-squashfs-combined-efi.img.gz $(date +"%Y.%m.%d")-immortalwrt-x86-64-squashfs-efi.img.gz
+        # mv config.buildinfo $(date +"%Y.%m.%d")-immortalwrt-config.buildinfo
+        # popd
+        make checksum
+        # mv bin/targets/x86/64/sha256sums bin/targets/x86/64/$(date +"%Y.%m.%d")-immortalwrt-sha256sums
+        echo "GENERATE_STATUS=success" >> $GITHUB_OUTPUT
+
+    - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=${{ env.date2 }}" >> $GITHUB_OUTPUT
-        touch release.txt
-        echo "openwrt-immortalwrt x86_64 固件下载" >> release.txt
-        echo "status=success" >> $GITHUB_OUTPUT
-        
-    - name: Publish to release
-      uses: softprops/action-gh-release@v1
+          echo "release_tag=$(date +"%Y.%m.%d")-immortalwrt3" >> $GITHUB_OUTPUT
+          echo "release_date=$(date "+%Y年%m月%d日")" >> $GITHUB_OUTPUT
+          touch release.txt
+          echo -e "**📥固件说明**: \n" >> release.txt
+          echo -e "#### 后台地址: \`192.168.5.1\`\n" >> release.txt
+          echo -e "#### 后台密码: \`password\`\n" >> release.txt
+          echo "status=success" >> $GITHUB_OUTPUT
+          
+    - name: Upload firmware to release
+      uses: softprops/action-gh-release@v2
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: ${{ env.FIRMWARE }}/*
-        name: ${{ env.date3 }}
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
+          name: ${{ steps.tag.outputs.release_date }} immortalwrt Linux-6.12
+          tag_name: ${{ steps.tag.outputs.release_tag }}
+          body_path: release.txt
+          files: ${{ env.FIRMWARE }}/*
+
+    - name: Delete workflow runs
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+          retain_days: 5
+          keep_minimum_runs: 5
+
+    - name: Remove old Releases
+      uses: dev-drprasad/delete-older-releases@v0.3.4
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      with:
+          keep_latest: 10
+          delete_tags: true
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Delete Artifacts
+      uses: geekyeggo/delete-artifact@v5
+      with:
+         name: |
+            bin-archive
