--- a/configs/immortalwrt/immortalwrt.config
+++ b/configs/immortalwrt/immortalwrt.config
@@ -20,7 +20,10 @@ CONFIG_PACKAGE_coremark=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
-# CONFIG_KERNEL_KALLSYMS is not set 
+# CONFIG_KERNEL_KALLSYMS is not set
+
+# GCC
+CONFIG_GCC_USE_VERSION_14=y
 
 ### Kernel driver
 CONFIG_PACKAGE_kmod-igb=y
