--- a/.github/workflows/OpenWrt_immortalwrt_6.12.yml
+++ b/.github/workflows/OpenWrt_immortalwrt_6.12.yml
@@ -46,6 +46,13 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: 安装依赖
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
+        gettext git libncurses5-dev libssl-dev python3-distutils python3-pyelftools rsync unzip \
+        zlib1g-dev libelf-dev subversion swig
+
     - name: Initialization Environment
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -86,7 +93,9 @@ jobs:
         
     - name: Install Feeds
       run: |
+        git clone https://git.openwrt.org/openwrt/openwrt.git
         cd $OPENWRTROOT
+        ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Load Custom Configuration
