--- a/.github/workflows/OpenWrt_immortalwrt_6.12.yml
+++ b/.github/workflows/OpenWrt_immortalwrt_6.12.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
-        gettext git libncurses5-dev libssl-dev python3-distutils python3-pyelftools rsync unzip \
+        gettext git libncurses5-dev libssl-dev python3-pyelftools rsync unzip \
         zlib1g-dev libelf-dev subversion swig
 
     - name: Initialization Environment
