--- a/.github/workflows/OpenWrt_immortalwrt_6.12.yml
+++ b/.github/workflows/OpenWrt_immortalwrt_6.12.yml
@@ -46,7 +46,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: 安装依赖
+    - name: Install Dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib \
@@ -94,7 +94,6 @@ jobs:
     - name: Install Feeds
       run: |
         cd $OPENWRTROOT
-        ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Load Custom Configuration
